fixed light-dark theme issue, fixed header and footer height across pages, fixed text stroke on mobile, fixed desktop display of the results page

--- a/lovequiz.client/src/footer.scss
+++ b/lovequiz.client/src/footer.scss
@@ -13,4 +13,6 @@
     box-shadow: 0 -6px 16px -4px #A86A7A;
     width: 100%;
     z-index: 100;
+
+    height: 60px;
 }
