--- a/lovequiz.client/src/index.css
+++ b/lovequiz.client/src/index.css
@@ -1,10 +1,10 @@
 :root {
+  color-scheme: only light !important;
+
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #A86A7A;
 
   font-synthesis: none;
@@ -13,7 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root {        
+#root {    
+  color-scheme: only light !important;
   min-height: 100vh;      
   width: 100%;
   background: #A86A7A;
